--- a/BKTreeTests/BKTreeTests.csproj
+++ b/BKTreeTests/BKTreeTests.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup>
     <CodeAnalysisRuleSet>juniormind.ruleset</CodeAnalysisRuleSet>
+    <ApplicationIcon />
+    <Win32Resource></Win32Resource>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.4">
